--- a/ExamGenerator/templates/score.html
+++ b/ExamGenerator/templates/score.html
@@ -1,4 +1,6 @@
-{% extends 'index.html' %}
+{% extends "layout/base.html" %}
+
+{% block title %} Exam Complete {% endblock %} 
 
 {% block content %}
 <div class="score-container">
