--- a/ExamGenerator/static/css/upload.css
+++ b/ExamGenerator/static/css/upload.css
@@ -1,11 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-body {
-    font-family: 'Roboto', sans-serif;
-    padding: 30px;
-    margin: 0;
-}
-
 .container {
     text-align: center;
     width: 95%;
@@ -15,29 +7,29 @@ body {
 }
 
 .header-section {
-    margin-left: 5%;
+    margin: 2% 5%;
 }
 
 .header-section h1 {
     font-weight: 500;
     font-size: 1.7rem;
-    color: black;
+    color: var(--black-color);
     margin-bottom: 8px;
     font-weight:bolder;
 }
 
 .header-section p {
     font-size: 0.95rem;
-    color: black;
+    color: var(--black-color);
     font-weight: normal;
 }
 
 .drop-section {
-    min-height: 400px;
-    border: 2px dashed black;
-    margin: 5px 35px 35px 35px;
+    display: flex;
+    min-height: 350px;
+    border: 2px dashed var(--black-color);
+    margin: 7px 35px;
     border-radius: 12px;
-    position: relative;
 }
 
 .drop-section .col:first-child {
@@ -45,7 +37,7 @@ body {
     visibility: visible;
     transition-duration: 0.2s;
     transform: scale(1);
-    width: 200px;
+    width: 300px;
     margin: auto;
 }
 
@@ -82,32 +74,23 @@ body {
 }
 
 .drop-section .upload-icon {
-    align-items: center;
-    width: 250px;
-    margin-top: 25px;
-    margin-bottom: 30px;
-}
-
-.drop-section span,
-.drop-section button {
     display: block;
     margin: auto;
-    color: black;
-    margin-bottom: 10px;
+    width: 80%;
 }
 
 .drop-section button {
+    font-family: 'Poppins', sans-serif;
     align-items: center;
-    margin-right: 20px;
     background-color: white;
     border: none;
     cursor: pointer;
     text-decoration: underline;
     font-size: large;
 }
+
 .drop-section p {
     align-items: center;
-    margin-left: 40px;
     font-size: large;
 }
 
@@ -118,7 +101,7 @@ body {
 .list-section {
     display: none;
     text-align: left;
-    margin-right: 35px;
+    margin: 7px 35px;
 }
 
 .list-section .list-title {
@@ -131,7 +114,7 @@ body {
     align-items: center;
     border-radius: 8px;
     transition-duration: 0.2s;
-    border: 2px solid black;
+    border: 2px solid var(--black-color);
     border-radius: 9px;
     margin-top: 0;
     margin-bottom: 10px;
@@ -174,7 +157,7 @@ body {
 .file-progress .progress-bar {
     display: column;
     height: 100%;
-    background-color: black;
+    background-color: var(--black-color);
     border-radius: 5px;
     width: 0%;
 }
@@ -200,7 +183,7 @@ body {
     font-size: large;
     font-weight: bolder;
     display: inline-block;
-    color: #000;
+    color: var(--black-color);
 }
 
 .list-section li .col .file-name span {
@@ -257,35 +240,23 @@ body {
 
 .progress-bar {
     height: 10px;
-    background-color: black; 
+    background-color: var(--black-color); 
     border-radius: 5px;
 }
 
 .progress-text {
     margin-left: 10px;
-    color: #000;
+    color: var(--black-color);
     font-weight: bold;
 }
-.button-69 {
-    background-color: initial;
-    background-image: linear-gradient(#5B699C 0, #5B699C 100%);
-    border-radius: 10px;
-    border-style: none;
-    box-shadow: rgba(245, 244, 247, .25) 0 1px 1px inset;
-    color: #fff;
-    cursor: pointer;
-    font-size: 18px;
-    font-weight: bolder;
-    height: 50px;
-    line-height: 50px; 
-    margin-left: 100px;
-    outline: 0;
-    text-align: center;
-    user-select: none;
-    width: 200px;
-  }
-  
-  .button-69:hover {
-    opacity: .7;
-  }
+
+.upload-btn {
+    padding-left: 5%;
+}
+
+.upload-btn button {
+    padding: 1em 4em;
+    margin: 1em 0;
+}
+
   
