--- a/ExamGenerator/templates/download.html
+++ b/ExamGenerator/templates/download.html
@@ -1,4 +1,6 @@
-{% extends 'index.html' %}
+{% extends "layout/base.html" %}
+
+{% block title %} Exam Generated {% endblock %} 
 
 {% block content %}
 <div class="download-container">
