--- a/ExamGenerator/static/css/multiple-choice.css
+++ b/ExamGenerator/static/css/multiple-choice.css
@@ -1,111 +1,29 @@
 
 body {
-    background-color: var(--secondary-color);    
-}
-
-.dot {
-    height: 70%;
-    width: 70%;
-    background-color: #ECD7EC;
-    border-radius: 50%;
-    display: inline-block;
-    position: absolute; 
-    z-index: -1; 
-    filter: blur(8px);
-    opacity: 0.5;
-}
-
-#container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
+    background-image: radial-gradient(circle, white 10%, var(--secondary-color), var(--secondary-color));  
 }
 
 #quiz {
     height: 480px;
     width: 70%;
-    padding: 20px;
     border-radius: 30px 10px;
     text-align: center;
     position: relative;
-    margin-top: -100px;
-}
-
-.progressBarContainer {
-    width: 100%;
-    padding: 10px 0;
-    position: absolute;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.progressBar {
-    width: 90%;
-    height: 5px;
-    background-color: #e7e7e7;
-    border-radius: 10px;
-    overflow: hidden;
-}
-
-.progressBar #progress {
-    height: 100%;
-    background-color: black;
-    border-radius: 10px;
-}
-
-#progress {
-    height: 100%;
-    background-color: #4caf50;
-    color: white;
-    text-align: center;
-    line-height: 30px; 
-    width: 0; 
-}
-
-#questionNo {
-    font-size: 16px;
-    color: black;   
-    margin-top: -1px;
-    transform: translateX(50%) translateY(0); 
-}
-
-#quiz_header {
-    height: 60px;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    border-radius: 30px 0;
-    margin-top: 20px;
-}
-
-#quiz_header h5 {
-    font-size: 28px;
-    margin: 0 20px;
-    color: black;
 }
 
 #quiz #question {
     width: 97%;
     position: absolute;
-    top: 90px;
+    top: 60px;
     display: flex;
-    flex-direction: row;
     color: white;
-    background-color: #5B699C;
+    background-color: var(--primary-color);
     border-radius: 10px;
     padding: 20px;
 }
 
 #quiz #question h2 {
-    font-size: 27px;
+    font-size: 26px;
 }
 
 #quiz #question h2:first-child {
@@ -113,7 +31,6 @@ body {
 }
 
 #quiz #optionList {
-    height: 400px;
     width: 100%;
     position: absolute;
     top: 160px;
@@ -214,14 +131,9 @@ body {
 }
 
 #Submit, #NextButton, #Cancel {
-    margin-top: 50%;
-    outline: none;
+    margin: 45% 2% 0 2%;
     font-size: 18px;
     cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
     padding: 10px;
     font-weight: bold;
 }
@@ -232,9 +144,6 @@ body {
     border: 2px solid white;
     border-radius: 10px;
     width: 400px;
-    position: absolute;
-    left: 30%;
-    transform: translateX(-50%) translateY(0); 
 }
 
 #NextButton {
@@ -245,7 +154,6 @@ body {
     width: 400px;
     position: absolute;
     left: calc(50% + 100px); 
-    transform: translateX(-50%) translateY(0); 
 }
 
 #Cancel {
@@ -254,9 +162,6 @@ body {
     border: 2px solid #5B699C;
     border-radius: 10px;
     width: 400px;
-    position: absolute;
-    left: calc(50% + 350px); 
-    transform: translateX(-50%) translateY(0);
 }
 
 #Submit:hover {
