--- a/ExamGenerator/static/css/style.css
+++ b/ExamGenerator/static/css/style.css
@@ -20,6 +20,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     color: var(--black-color);
+    overflow-x: hidden;
 }
 
 h1 {
@@ -57,6 +58,62 @@ h1 {
     background-color: var(--background-color);
 }
 
+
+/* QUIZ SECTION GLOBAL STYLES */
+#container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+}
+
+#quiz_header {
+    width: 100vw;
+}
+
+#quiz_header h2 {
+    font-size: 28px;
+    color: var(--black-color);
+    padding: 1em 0 0 1em;
+}
+
+.progressBarContainer {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.progressBar {
+    width: 90%;
+    height: 5px;
+    background-color: #e7e7e7;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.progressBar #progress {
+    height: 100%;
+    background-color: var(--black-color);
+    border-radius: 10px;
+}
+
+#progress {
+    height: 100%;
+    background-color: #4caf50;
+    color: white;
+    text-align: center;
+    line-height: 30px; 
+    width: 0; 
+}
+
+#questionNo {
+    font-size: 16px;
+    color: var(--black-color);
+    text-align: end;
+    margin: 1em;
+}
 
 
 
