--- a/ExamGenerator/static/css/true-or-false.css
+++ b/ExamGenerator/static/css/true-or-false.css
@@ -1,39 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-}
-
 body {
-    font-family: 'Roboto', sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #EDD7ED;
-    overflow: hidden;
-}
-.dot {
-    height: 70%;
-    width: 70%;
-    background-color: #81ABBF;
-    border-radius: 50%;
-    display: inline-block;
-    position: absolute; 
-    z-index: -1; 
-    filter: blur(8px);
-    opacity: 0.1;
-}
-
-
-#container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
+    background-image: radial-gradient(circle, white 10%, var(--tertiary-color), var(--tertiary-color));
 }
 
 #quiz {
@@ -86,24 +52,6 @@ body {
     transform: translateX(50%) translateY(0);
 }
 
-#quiz_header {
-    height: 60px;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    border-radius: 30px 0;
-    margin-top: 20px;
-}
-
-#quiz_header h5 {
-    font-size: 28px;
-    margin: 0 20px;
-    color: black;
-}
 
 #quiz #question {
     width: 97%;
