--- a/ExamGenerator/templates/game/identification.html
+++ b/ExamGenerator/templates/game/identification.html
@@ -34,3 +34,8 @@
     </div>
 
 {% endblock %}
+
+{% block js_file %} 
+    <script src="../../static/js/questions.js"></script>
+    <script src="../../static/js/identification.js"></script>
+{% endblock %}
