--- a/ExamGenerator/templates/game/multiple-choice.html
+++ b/ExamGenerator/templates/game/multiple-choice.html
@@ -31,10 +31,11 @@
             <h4 class="choice_que" id="option4"></h4>
         </div>
     </div>
-    <div>
-        <button id="Submit" class="btn btn-primary">Submit</button>
-        <button id="Cancel" class="btn btn-secondary">Cancel</button>
-    </div>
 
+{% endblock %}
+
+{% block js_file %} 
+    <script src="../../static/js/questions.js"></script>
+    <script src="../../static/js/multiple-choice.js"></script>
 {% endblock %}
  
