--- a/ExamGenerator/templates/game/true-or-false.html
+++ b/ExamGenerator/templates/game/true-or-false.html
@@ -40,3 +40,8 @@
     </div>
 
 {% endblock %}
+
+{% block js_file %} 
+    <script src="../../static/js/questions.js"></script>
+    <script src="../../static/js/true-or-false.js"></script>
+{% endblock %}
