--- a/ExamGenerator/templates/layout/base.html
+++ b/ExamGenerator/templates/layout/base.html
@@ -24,12 +24,8 @@
     
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    
-    <script src="../../static/js/up1.js"></script>
-    <script src="../../static/js/questions.js"></script>
-    <script src="../../static/js/identification.js"></script>
-    <script src="../../static/js/multiple-choice.js"></script>
-    <script src="../../static/js/true-or-false.js"></script>
+
+    {% block js_file %} {% endblock %}
 
 </body>
 </html>
