--- a/ExamGenerator/templates/layout/game_base.html
+++ b/ExamGenerator/templates/layout/game_base.html
@@ -19,6 +19,11 @@
             <!-- Quiz questions and choices goes here -->
             {% block game_content %}
             {% endblock %}
+
+            <div class="quiz_buttons">
+                <button id="Submit" class="btn btn-primary" type="button">Submit</button>
+                <button id="Cancel" class="btn btn-secondary" type="button">Cancel</button>
+            </div>
         </div>
     </div>
 </div>
