--- a/ExamGenerator/static/css/style.css
+++ b/ExamGenerator/static/css/style.css
@@ -6,10 +6,10 @@
 
     --background-color: #EFF2FE;
     --black-color: #2B1B1B;
-    --green-color: #2D483F;
+    --green-color: #4CAF50;;
     --green-light: #ADFFE4;
     --red-color: #E72636;
-    --red-light: #ADFFE4;
+    --red-light: #FFADC8;
 }
 
 * {
@@ -46,7 +46,9 @@ h1 {
 }
 
 .btn-primary:hover {
-    filter: brightness(120%);
+    color: var(--accent-color);
+    background-color: var(--background-color);
+    border: 2px solid var(--accent-color);
 }
 
 .btn-secondary {
@@ -55,7 +57,8 @@ h1 {
 }
 
 .btn-secondary:hover {
-    background-color: var(--background-color);
+    color: var(--black-color);
+    border: 2px solid var(--black-color);
 }
 
 
@@ -115,13 +118,18 @@ h1 {
     margin: 1em;
 }
 
+.quiz_main {
+    display: flex;
+    flex-direction: column;
+}
+
 
 
 
 .score-container {
     width: 100vw;
     height: 100vh;
-    background-image: url('images/score_bg.svg');
+    background-image: url('../images/score_bg.svg');
     background-size: cover;
     display: flex;
     flex-direction: column;
