--- a/ExamGenerator/templates/upload.html
+++ b/ExamGenerator/templates/upload.html
@@ -1,5 +1,9 @@
 {% extends "layout/base.html" %}
 
+{% block css_file %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/upload.css') }}">
+{% endblock %}
+
 {% block title %} File Upload {% endblock %} 
 
 {% block content %}
