--- a/ExamGenerator/static/css/style.css
+++ b/ExamGenerator/static/css/style.css
@@ -123,6 +123,39 @@ h1 {
     flex-direction: column;
 }
 
+#quiz {
+    height: 480px;
+    width: 70%;
+    border-radius: 30px 10px;
+    text-align: center;
+    position: relative;
+}
+
+#quiz #question {
+    width: 97%;
+    display: flex;
+    color: white;
+    background-color: var(--primary-color);
+    border-radius: 10px;
+    padding: 20px;
+    margin-bottom: 15px;
+}
+
+#quiz #question h2 {
+    font-size: 24px;
+}
+
+#quiz #optionList {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.quiz_buttons button {
+    width: 300px;
+    margin: 2em 3em;
+}
+
 
 
 
