--- a/ExamGenerator/templates/game/multiple-choice.html
+++ b/ExamGenerator/templates/game/multiple-choice.html
@@ -1,4 +1,4 @@
-{% extends "/layout/game_base.html" %}
+{% extends "/layout/game-base.html" %}
 
 {% block css_file %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/multiple-choice.css') }}">
