--- a/ExamGenerator/templates/layout/base.html
+++ b/ExamGenerator/templates/layout/base.html
@@ -22,9 +22,9 @@
 
 
     
-    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+    <!-- <script src='https://kit.fontawesome.com/a076d05399.js'></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-
+    <script src="../../static/js/script.js"></script>
     {% block js_file %} {% endblock %}
 
 </body>
