--- a/ExamGenerator/templates/layout/game-base.html
+++ b/ExamGenerator/templates/layout/game-base.html
@@ -26,5 +26,8 @@
             </div>
         </div>
     </div>
+    
+    <div id="result"></div>
+    <div id="points"></div>
 </div>
 {% endblock %}
