--- a/ExamGenerator/static/css/style.css
+++ b/ExamGenerator/static/css/style.css
@@ -232,20 +232,53 @@ h1 {
 }
 
 
- 
-.file-container,
-.options-container {
-    display: inline-block;
-    background-color: var(--background-color);
-    width: max-content;
-    padding: 1.5em;
-    margin: 2em;
-    border-radius: 1em;
-    box-shadow: 0 0 10px -5px rgba(0, 0, 0, 0.5);
+
+
+.preview-container {
+    display: flex;
+    gap: 3%;
+    padding: 2%;
 }
 
-.options, .options div {
+
+.file-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 60vw;
+    height: 70vh;
+    gap: 1.5em;
+    padding: 1.5em;
+    border-radius: 1em;
+    background-color: var(--primary-color);
+    box-shadow: 0 0 10px -5px rgba(0, 0, 0, 0.5);
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.file-header {
+    display: flex;
+    flex-basis: 100%;
+    width: 100%;
+    background-color: var(--primary-color);
+}
+
+.file-container div {
+    width: max-content;
+}
+
+.options {
     display: flex;
     flex-direction: column;
     gap: 1em;
+    border-radius: 1em;
+    background-color: var(--background-color);
+    box-shadow: 0 0 10px -5px rgba(0, 0, 0, 0.5);
+    padding: 1.5em;
+}
+
+.options div {
+    display: flex;
+    flex-direction: column;
+    gap: 0.8em;
 }
