--- a/ExamGenerator/templates/preview.html
+++ b/ExamGenerator/templates/preview.html
@@ -3,10 +3,23 @@
 {% block title %} Page Selection {% endblock %} 
 
 {% block content %}
-    <div>
-        <h1>Page Selection</h1>
+    <h1>Page Selection</h1>
+    <div class="preview-container">
         <div class="file-container" id="thumbnail-container">
-            <!-- PDF.js selection goes here -->
+            <div class="file-header">
+                <h2>File Name Here</h2>
+            </div>
+
+            {% if thumbnails %}
+                {% for thumbnail in thumbnails %}
+                    <div class="thumbnail-item">
+                        <p>Page {{ loop.index }}</p>
+                        <img src="{{ thumbnail }}">
+                    </div>
+                {% endfor %}
+            {% else %}
+                <p>No thumbnails available.</p>
+            {% endif %}
         </div>
 
         <div class="options-container">
