--- a/ExamGenerator/static/css/style.css
+++ b/ExamGenerator/static/css/style.css
@@ -6,6 +6,7 @@
 
     --background-color: #EFF2FE;
     --black-color: #2B1B1B;
+    --gray-color: #D9D9D9;
     --green-color: #4CAF50;;
     --green-light: #ADFFE4;
     --red-color: #E72636;
@@ -247,10 +248,9 @@ h1 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 60vw;
+    width: 55vw;
     height: 70vh;
-    gap: 1.5em;
-    padding: 1.5em;
+    padding: 0 2em 2em 2em;
     border-radius: 1em;
     background-color: var(--primary-color);
     box-shadow: 0 0 10px -5px rgba(0, 0, 0, 0.5);
@@ -263,21 +263,29 @@ h1 {
     flex-basis: 100%;
     width: 100%;
     color: white;
+    padding: 1.5em 0;
     background-color: var(--primary-color);
-}
+    position: sticky;
+    top: 0;
+    z-index: 1; 
+} 
 
 .file-container div {
     width: max-content;
 }
 
 .pages-container {
-    background-color: #D9D9D9;
+    background-color: var(--gray-color);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 1.5em;
+    gap: 2.5em;
     padding: 3em 0;
     box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.7);
+}
+
+.thumbnail-item p {
+    text-align: center;
 }
 
 .options {
@@ -287,7 +295,8 @@ h1 {
     border-radius: 1em;
     background-color: var(--background-color);
     box-shadow: 0 0 10px -5px rgba(0, 0, 0, 0.5);
-    padding: 1.5em;
+    padding: 1.2em 2em;
+    margin: 0.8em;
 }
 
 .options div {
@@ -298,11 +307,10 @@ h1 {
 
 .options select,
 .options input {
-    height: 2.5em;
     font-family: 'Poppins', sans-serif;
     border-radius: 5px;
     border: none;
-    padding: 0.5em;
+    padding: 0.7em;
 }
 
 .options select {
@@ -312,4 +320,10 @@ h1 {
 
 .options label {
     font-weight: bold;
+}
+
+.options-button button {
+    width: 90%;
+    display: block;
+    margin: 0 auto;
 }
