--- a/ExamGenerator/templates/download.html
+++ b/ExamGenerator/templates/download.html
@@ -11,8 +11,8 @@
         </div>
         
         <div class="download-buttons">
-            <button class="btn btn-secondary">Review & Download</button>
-            <button  class="btn btn-primary">Start Exam</button>
+            <button class="btn btn-secondary">Review & Download</a>
+            <button class="btn btn-primary" onclick="window.location.href = 'game/{{ ques_type }}' ">Start Exam</a>
         </div>
     </div>
 </div>
