add review answers page

--- a/ExamGenerator/templates/download.html
+++ b/ExamGenerator/templates/download.html
@@ -11,7 +11,7 @@
         </div>
         
         <div class="download-buttons">
-            <button class="btn btn-secondary">Review & Download</a>
+            <a class="btn btn-secondary" href="">Review & Download</a>
             <button class="btn btn-primary" onclick="window.location.href = 'game/{{ ques_type }}' ">Start Exam</a>
         </div>
     </div>
