--- a/ExamGenerator/static/css/style.css
+++ b/ExamGenerator/static/css/style.css
@@ -60,6 +60,11 @@ h1 {
 .btn-secondary:hover {
     color: var(--black-color);
     border: 2px solid var(--black-color);
+    background-color: white !important;
+}
+
+.page-title {
+    padding: 1em 2em 0 2em;
 }
 
 
@@ -183,17 +188,57 @@ h1 {
 
 .score-text h1 {
     font-size: 2.5em;
+    font-weight: bold !important;
 }
 
 .score-text p {
     font-weight: bold;
 }
 
-.score-buttons a {
+.score-buttons a,
+.score-buttons button {
     padding: 1.2em 2.5em;
     margin: 1.5em 2em;
 }
 
+.modal-title {
+    text-align: left;
+    padding: 0 1em;
+}
+
+.modal-title h3 {
+    font-weight: bold;
+    margin: 0;
+}
+
+.results {
+    text-align: left;
+    padding: 1em;
+    margin: 1em;
+    border-radius: 1em;
+    box-shadow: 0 0 10px -5px rgba(0, 0, 0, 0.5);
+}
+
+.results h4 {
+    font-weight: bold;
+}
+
+
+.correct-ans {
+    background-color: var(--green-light);
+}
+
+.correct-ans h4 {
+    color: var(--green-color);
+}
+
+.wrong-ans {
+    background-color: var(--red-light);
+}
+
+.wrong-ans h4 {
+    color: var(--red-color);
+}
 
 
 
@@ -225,6 +270,7 @@ h1 {
     width: 60%;
 }
 
+.download-buttons a,
 .download-buttons button {
     display: block;
     padding: 1.5em;
@@ -243,9 +289,7 @@ h1 {
     background-size: cover;
 }
 
-.preview-container-title {
-    padding: 1em 2em 0 2em;
-}
+
 
 .preview-main {
     display: flex;
@@ -280,12 +324,10 @@ h1 {
     z-index: 1; 
 } 
 
-.file-container div {
-    width: max-content;
-}
 
 .pages-container {
     background-color: var(--gray-color);
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
